package com.attack.mapper;

import com.attack.entity.Menu;
import com.baomidou.mybatisplus.core.mapper.BaseMapper;
import org.apache.ibatis.annotations.Mapper;



@Mapper
public interface MenuMapper extends BaseMapper<Menu> {
}
